--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/coder-engineer-working-with-his-pc_1293807-8659.jpg" alt="Ryan Mwangi profile picture" />
+        <img src="./assets/ryanmwangi.jpeg" alt="Ryan Mwangi profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src=""
+            src="./assets/coder-engineer-working-with-his-pc_1293807-8659.jpg"
             alt="Profile picture"
             class="about-pic"
           />
